--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "ng": "ng",
     "start": "ng serve",
     "start:heroku": "ng serve --port=$PORT",
-    "build": "ng build --aot -prod",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "commit": "git-cz",
-    "heroku-postbuild": "ng build",
+    "heroku-postbuild": "ng build --aot -prod",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo",
     "release": "standard-version"
   },
